# geo-post-mcp

./: .gitignore  CLAUDE.md  README.md  geo-post-mcp-settings.json  pyproject.toml
.specify/memory/: constitution.md
specs/001-postgis-mcp-server/: spec.md
specs/001-postgis-mcp-server/checklists/: requirements.md
specs/002-http-transport/: spec.md
specs/002-http-transport/checklists/: requirements.md
specs/003-settings-config/: spec.md
specs/003-settings-config/checklists/: requirements.md
specs/004-fieldmeaning-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fieldmeaning-tool/checklists/: requirements.md
specs/004-fieldmeaning-tool/contracts/: fieldmeaning-tool.md
specs/005-test-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-test-coverage/checklists/: requirements.md
specs/006-settings-cli-path/: research.md  spec.md  tasks.md
specs/006-settings-cli-path/checklists/: requirements.md
src/: server.py
src/config/: logging.py  settings.py
src/models/: fieldmeaning.py  query.py
src/services/: access_control.py  database.py  fieldmeaning.py  query.py  schema.py  sql_validator.py
src/tools/: fieldmeaning.py  query.py  schema.py
tests/: conftest.py
tests/functional/: conftest.py  test_fieldmeaning_tool.py  test_geo_query_tool.py  test_query_tool.py  test_schema_tool.py
tests/unit/: conftest.py  test_access_control.py  test_database.py  test_fieldmeaning_service.py  test_logging.py  test_schema_service.py  test_settings.py  test_sql_validator.py
