[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-post-mcp"
version = "0.1.0"
description = "MCP server providing an interface to PostgreSQL with PostGIS"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mcp>=1.0",
]
dev = [
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies required)",
    "functional: Functional tests (requires PostgreSQL with PostGIS)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88
